# llm-tools-call

./: .gitignore  README.md  langgraph-tool-anypoint.ipynb  llama31-anypoint-api.ipynb  tool-calling-agent-local.ipynb
agent-k8s/: README.md  pyproject.toml  run_client.py  run_service.py
agent-k8s/agent/: __init__.py  async_agent.py
agent-k8s/client/: client.py
agent-k8s/docker/: Dockerfile.service
agent-k8s/k8s/: agent-ingress.yaml  agent-service.yaml  postgres.yaml
agent-k8s/schema/: __init__.py  schema.py
agent-k8s/service/: service.py
anypoint/llama-guard-agent/: mule-artifact.json  pom.xml
anypoint/llama-guard-agent/main/mule/: global-error-handler.xml  global.xml  safe-guard-agent-imp.xml  safe-guard-agent.xml
anypoint/llama-guard-agent/main/resources/: agent.yaml  application-types.xml  log4j2.xml  sec-prop.yaml
anypoint/llama-guard-agent/main/resources/api/: safe-guard-agent.raml
